--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .ipynb_checkpoints/001.Data_Collection-checkpoint.ipynb
 DATA/full_df.csv
 .DS_Store
+.ipynb_checkpoints/010.Data_Cleaning-checkpoint.ipynb
