--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ DATA/full_df.csv
 .ipynb_checkpoints/030.Violation_Text_Clustering-checkpoint.ipynb
 preprocessed_text.txt
 PKL/doc_avg
+.ipynb_checkpoints/README-checkpoint.md
